--- a/index.html
+++ b/index.html
@@ -7,32 +7,58 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="css/ccm.css" rel="stylesheet">
 
     <title>Geometría y Topología</title>
 </head>
 <body>
 
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="img/ccm-logo.svg" alt="CCM logo" height="60px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto align mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#presentacion">Presentación</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#registro">Registro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#programa">Programa</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="hero-image d-flex">
     <img class="img" src="img/GyT.png" alt="Geometría y Topología title">
     <h1>Geometría y Topología en Morelia</h1>
     <h4>23-24 de junio de 2022</h4>
 </div>
 
-<div class="d-flex justify-content-center">
-    <div class="card-gyt">
-        <h1 class="d-flex justify-content-center">Test</h1>
-    </div>
-</div>
-
 <section id="presentacion">
     <div class="container">
         <h1 class="text-center my-5">Presentación</h1>
-        <p>El <strong>Centro de Ciencias Matemáticas de la UNAM</strong> se complace en invitarte al evento de Geometría
-            y Topología en Morelia. Esta actividad está dirigida a estudiantes de los últimos semestres de la carrera de
-            matemáticas o una afín. Expondremos temas relacionados con geometría y topología que se estudian ampliamente
-             en el CCM. Los participantes tendrán oportunidad de interactuar con especialistas y estudiantes avanzados.</p>
-
+        <div class="row justify-content-center">
+            <div class="col col-sm-9">
+                <p>El <strong>Centro de Ciencias Matemáticas de la UNAM</strong> se complace en invitarte al evento de Geometría
+                y Topología en Morelia. Esta actividad está dirigida a estudiantes de los últimos semestres de la carrera de
+                matemáticas o una afín. Expondremos temas relacionados con geometría y topología que se estudian ampliamente
+                 en el CCM. Los participantes tendrán oportunidad de interactuar con especialistas y estudiantes avanzados.</p>
+            </div>
+        </div>
         <div class="row mt-5">
             <div class="col col-sm-6 d-flex justify-content-center">
                 <div class="feature feature-red">
@@ -65,8 +91,12 @@
 <section id="registro">
     <div class="container">
         <h1 class="text-center my-5">Registro</h1>
-        <p>Para registrarte es necesario tener tu cardex. También tendrás que darnos la referencia de un profesor a
-            quien solicitaremos una carta de recomendación.</p>
+        <div class="row justify-content-center">
+            <div class="col col-sm-9">
+                <p>Para registrarte es necesario tener tu cardex. También tendrás que darnos la referencia de un profesor a
+                quien solicitaremos una carta de recomendación.</p>
+            </div>
+        </div>
 
         <h1 class="text-center my-5">Fechas Importantes</h1>
         <div class="row my-5">
@@ -114,7 +144,7 @@
 
 <section id="programa">
     <div class="container">
-        <h1 class="text-center my-5">Cursos</h1>
+        <h1 class="text-center mt-5 mb-4">Cursos</h1>
         <div class="d-flex flex-column">
             <div class="title">Teoría K algebraica, K_1</div>
             <div class="speaker">Daniel Juan</div>
@@ -122,7 +152,7 @@
             <div class="speaker mb-5">Manuel Sedano</div>
         </div>
 
-        <h1 class="text-center my-5">Pláticas</h1>
+        <h1 class="text-center mt-5 mb-4">Pláticas</h1>
         <div class="d-flex flex-column">
             <div class="title">¿Cómo descomponer un grupo?</div>
             <div class="speaker">Sandy Aguilar</div>
@@ -138,23 +168,28 @@
 </section>
 
 <section id="organizadores">
+
     <h1 class="d-flex justify-content-center mb-5">Organizadores</h1>
-    <div class="d-flex justify-content-center mb-5">
-        <div class="organizador">Noé Bárcenas</div>
-        <div class="pipe">|</div>
-        <div class="organizador">Jesús Hernández</div>
-        <div class="pipe">|</div>
-        <div class="organizador">Daniel Juan</div>
-        <div class="pipe">|</div>
-        <div class="organizador">Ferrán Valdez</div>
+    <div class="sombra">
+        <div class="d-flex justify-content-center mb-5">
+            <div class="organizador">Noé Bárcenas</div>
+            <div class="pipe">|</div>
+            <div class="organizador">Jesús Hernández</div>
+            <div class="pipe">|</div>
+            <div class="organizador">Daniel Juan</div>
+            <div class="pipe">|</div>
+            <div class="organizador">Ferrán Valdez</div>
+        </div>
+
     </div>
 
     <div class="d-flex justify-content-center">
-        <div class="logo"><img src="img/unam_azul.png" alt="Logo UNAM"></div><div class="logo"><img src="img/CONACYT.png" alt="Logo Conacyt"></div><div class="logo"><img src="img/UNAM-NACION.png" alt="Logo UNAM"></div>
+        <div class="logo"><img src="img/unam.png" alt="Logo UNAM"></div><div class="logo"><img src="img/CONACYT.png" alt="Logo Conacyt"></div><div class="logo"><img src="img/unam-nacion.png" alt="Logo UNAM"></div>
     </div>
 
-    <h1 class="d-flex justify-content-center mt-5">contacto</h1>
-    <p>daniel at matmor.unam.mx</p>
+
+    <h1 class="d-flex justify-content-center mb-5">contacto</h1>
+    <p>daniel<i class="bi bi-at"></i>matmor.unam.mx</p>
 
 </section>
 
