--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" href="#">
             <img src="img/ccm-logo.svg" alt="CCM logo" height="60px">
         </a>
@@ -43,9 +43,9 @@
     </div>
 </nav>
 <div class="hero-image d-flex">
-    <img class="img" src="img/GyT.png" alt="Geometría y Topología title">
+    <img class="img-hero" src="img/GyT.png" alt="Geometría y Topología title">
     <h1>Geometría y Topología en Morelia</h1>
-    <h4>23-24 de junio de 2022</h4>
+    <h4>23-24 de junio 2022</h4>
 </div>
 
 <section id="presentacion">
@@ -171,7 +171,7 @@
 
     <h1 class="d-flex justify-content-center mb-5">Organizadores</h1>
     <div class="sombra">
-        <div class="d-flex justify-content-center mb-5">
+        <div class="d-flex justify-content-center mb-5 lista-organizadores">
             <div class="organizador">Noé Bárcenas</div>
             <div class="pipe">|</div>
             <div class="organizador">Jesús Hernández</div>
@@ -183,8 +183,8 @@
 
     </div>
 
-    <div class="d-flex justify-content-center">
-        <div class="logo"><img src="img/unam.png" alt="Logo UNAM"></div><div class="logo"><img src="img/CONACYT.png" alt="Logo Conacyt"></div><div class="logo"><img src="img/unam-nacion.png" alt="Logo UNAM"></div>
+    <div class="d-flex justify-content-center lista-organizadores">
+        <div class="logo"><img src="img/unam.png" alt="Logo UNAM"></div><div class="logo"><img src="img/CONACYT.png" alt="Logo Conacyt"></div><div class="logo"><img src="img/nacion.png" alt="Logo UNAM"></div>
     </div>
 
 
