--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col col-sm-9">
                 <p>El <strong>Centro de Ciencias Matemáticas de la UNAM</strong> se complace en invitarte al evento de Geometría
                 y Topología en Morelia. Esta actividad está dirigida a estudiantes de los últimos semestres de la carrera de
-                matemáticas o una afín. Expondremos temas relacionados con geometría y topología que se estudian ampliamente
+                matemáticas o un área afín. Expondremos temas relacionados con geometría y topología que se estudian ampliamente
                  en el CCM. Los participantes tendrán oportunidad de interactuar con especialistas y estudiantes avanzados.</p>
             </div>
         </div>
