--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <a class="btn btn-green btn-lg my-5" href="#" role="button">Regístrate</a>
+            <a class="btn btn-green btn-lg my-5" href="https://tic.matmor.unam.mx/geometria-topologia/registro/new" role="button">Regístrate</a>
         </div>
     </div>
 
