--- a/index.html
+++ b/index.html
@@ -167,6 +167,102 @@
     </div>
 </section>
 
+<section id="schedule">
+
+    <div class="container">
+        <h1 class="text-center my-5">Horario</h1>
+
+        <div class="row justify-content-center">
+            <div class="col col-sm-8">
+
+                <div class="contenedor-horario">
+                    <h3 class="horario-dia mb-5">Jueves</h3>
+
+                    <div class="evento d-flex bg-gris">
+                        <div class="hora">09:00 - 10:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">3-variedades, una introducción</div>
+                            <div class="profesor">Manuel Sedano</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex bg-gris">
+                        <div class="hora">11:00 - 12:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">Teoría K algebraica, K_1</div>
+                            <div class="profesor">Daniel Juan</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex ">
+                        <div class="hora">12:45 - 13:45</div>
+                        <div class="descripcion">
+                            <div class="titulo">¿Cómo descomponer un grupo?</div>
+                            <div class="profesor">Sandy Aguilar</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex">
+                        <div class="hora">14:00 - 14:45</div>
+                        <div class="descripcion">
+                            <div class="titulo">Comida</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex ">
+                        <div class="hora">16:00 - 17:00</div>
+                        <div class="descripcion">
+                            <div class="titulo">Superficies de traslación y dilatación</div>
+                            <div class="profesor">Ferrán Valdez</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex">
+                        <div class="hora">17:00 - 17:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">Receso</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex ">
+                        <div class="hora">17:30 - 18:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">Grupos, superficies y rigidez</div>
+                            <div class="profesor">Jesús Hernández</div>
+                        </div>
+                    </div>
+
+                    <h3 class="horario-dia my-5">Viernes</h3>
+
+                    <div class="evento d-flex bg-gris">
+                        <div class="hora">09:00 - 10:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">3-variedades, una introducción</div>
+                            <div class="profesor">Manuel Sedano</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex bg-gris">
+                        <div class="hora">11:00 - 12:30</div>
+                        <div class="descripcion">
+                            <div class="titulo">Teoría K algebraica, K_1</div>
+                            <div class="profesor">Daniel Juan</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex ">
+                        <div class="hora">12:45 - 13:45</div>
+                        <div class="descripcion">
+                            <div class="titulo">Reuniones Informales</div>
+                            <div class="profesor">Información del Posgrado</div>
+                        </div>
+                    </div>
+                    <div class="evento d-flex">
+                        <div class="hora">14:00 - 14:45</div>
+                        <div class="descripcion">
+                            <div class="titulo">Comida</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</section>
+
 <section id="organizadores">
 
     <h1 class="d-flex justify-content-center mb-5">Organizadores</h1>
